[gd_scene load_steps=5 format=3 uid="uid://dtd7cphrp2han"]

[ext_resource type="Script" path="res://scripts/overworld/state_puzzle_decoration.gd" id="1_82eny"]
[ext_resource type="PackedScene" uid="uid://bmaqkuubonmf2" path="res://prefabs/entities/animated_decoration.tscn" id="2_q8k8x"]
[ext_resource type="SpriteFrames" uid="uid://dwc8py4u2ei65" path="res://graphics/ui/a_interact_icon.tres" id="3_c8qd4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k7616"]
size = Vector2(17, 17)

[node name="StatePuzzleDecoration" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_82eny")
interactPriority = 1

[node name="AnimatedDecoration" parent="." instance=ExtResource("2_q8k8x")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_k7616")

[node name="InteractSprite" type="AnimatedSprite2D" parent="." groups=["Interactable"]]
position = Vector2(0, -10)
sprite_frames = ExtResource("3_c8qd4")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]

[editable path="AnimatedDecoration"]
